--- a/sftp-config.json
+++ b/sftp-config.json
@@ -24,7 +24,8 @@
         "\\.sublime-(project|workspace)", "sftp-config(-alt\\d?)?\\.json",
         "sftp-settings\\.json", "/venv/", "\\.svn/", "\\.hg/", "\\.git/",
         "\\.bzr", "_darcs", "CVS", "\\.DS_Store", "Thumbs\\.db", "desktop\\.ini"
-        ,"/vendor/","/storage/"
+        // ,"/vendor/"
+        ,"/storage/"
     ],
     //"file_permissions": "664",
     //"dir_permissions": "775",
